feat: add Owner, User -- Dashboard, Facility component

--- a/web/backend/.env
+++ b/web/backend/.env
@@ -3,7 +3,7 @@ PORT=5001
 NODE_ENV=development
 
 # Database
-MONGODB_URI="mongodb+srv://gururajgurram1512:ZFB0ykIuyYFelHTh@cluster0.pbdwvm9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI=mongodb+srv://gururajgurram1512:loYIJVzqUwjpp0Se@cluster0.cdzcanw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Configuration
 JWT_SECRET=od00235
