--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -10,22 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "@reduxjs/toolkit": "^1.9.7",
-    "react-redux": "^8.1.3",
-    "redux-persist": "^6.0.0",
-    "axios": "^1.6.2",
-    "react-hook-form": "^7.48.2",
     "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "framer-motion": "^10.16.16",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
+    "@react-google-maps/api": "^2.20.7",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-datepicker": "^4.19.4",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
-    "@types/react-datepicker": "^4.19.4"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.1",
+    "redux-persist": "^6.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
