feat: Update OwnerDashboard navigation and add admin slice for global stats and user management

--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "test": "jest",
-    "seed:sports": "ts-node src/utils/seedSports.ts"
+    "seed:sports": "ts-node src/utils/seedSports.ts",
+    "seed:facilities": "ts-node src/utils/seedFacilities.ts"
   },
   "keywords": [
     "court",
