--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -17,6 +17,9 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
